# cs2881r-mini-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  writeup.md
results/: Llama-2-Chat-13b_responses.jsonl  Llama-2-Chat-7b_responses.jsonl  Mistral-Instruct-7b_responses.jsonl  Mixtral-8x7b_responses.jsonl  README.md  SOLAR-10.7b_responses.jsonl  Vicuna-13b_responses_conv.jsonl  WizardLM-13b_responses_conv.jsonl  articles.jsonl  claude-haiku-4-5-reasoning_responses.jsonl  claude-haiku-4-5_responses.jsonl  claude-sonnet-4-5-reasoning_responses.jsonl  claude-sonnet-4-5_responses.jsonl  corpus.jsonl  gemini-2.5-flash-reasoning_responses.jsonl  gemini-2.5-flash_responses.jsonl  gemini-2.5-pro-reasoning_responses.jsonl  gpt-4.1_responses.jsonl  gpt-5-chat_responses.jsonl  gpt-5-mini_responses.jsonl  model_metrics.jsonl  model_metrics_local.jsonl  model_metrics_web.jsonl  model_summary_local.md  model_summary_web.md  prompts.jsonl  questions.jsonl  writeup.md
src/cs2881r_mini_project/: ask.py  batch.py  generate_anthropic.py  generate_google.py  generate_mlx.py  generate_openai.py  index.py  prompts.py  questions.py  stats.py  table.py  utils.py  wiki.py
